--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -2,15 +2,12 @@
 
 <% content_for :head do %>
 <script type="text/javascript">
-  console.log(1);
   window.onload = function() {
   <% @songs.each do |song| %>
-  console.log("<%= song.url %>")
   window.player_<%= song.url.hash.abs %> = new Clappr.Player({source: "<%= song.url %>",
   parentId: "#song-<%= song.url.hash.abs %>", autoPlay:false,
   width:600, height:50, hideMediaControl:false});
   <% end %>
-  console.log(3);
   }
 </script>
 <% end %>
@@ -21,7 +18,7 @@
   </div>
   <% @songs.each do |song| %>
   <div class="photo">
-    <%= song.title %>
+    <a href="<%= song.url %>">    <%= song.title %> </a>
     <div  id="song-<%= song.url.hash.abs %>">
     </div>
   </div>
